# moodzify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  local.yml  pyproject.toml  requirements.dev.txt  requirements.txt
compose/local/: Dockerfile
moodzify/: manage.py
moodzify/accounts/: tests.py
moodzify/accounts/migrations/: 0001_initial.py
moodzify/mood_tracking/: apps.py  models.py  urls.py  views.py
moodzify/mood_tracking/migrations/: 0001_initial.py
moodzify/moods/: forms.py  models.py  tests.py  urls.py  views.py
moodzify/moods/management/commands/: addmoods.py  clearmoods.py
moodzify/moods/migrations/: 0001_initial.py
moodzify/moods/tests/: test_models.py  test_views.py  tests_views.py
moodzify/moodzify/: asgi.py  settings.py  urls.py  wsgi.py
moodzify/templates/: base.html  home.html
moodzify/templates/mood_tracking/: mood_list.html
moodzify/templates/moods/: mood_create.html  mood_delete.html  mood_list.html  mood_update.html
moodzify/templates/registration/: login.html  signup.html
moodzify/users/: tests.py
moodzify/users/migrations/: 0001_initial.py
