[tool.poetry]
name = "moodzify"
version = "0.1.0"
description = ""
authors = ["daniarlert <24715931+daniarlert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg = {extras = ["binary"], version = "^3.1.10"}
environs = {extras = ["django"], version = "^9.5.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
commitizen = "^3.8.2"
isort = "^5.12.0"
ruff = "^0.0.289"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["migrations"]
ignore = ["E501"]
